# tree-sitter-kraken

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: ci.yml
bindings/c/: tree-sitter-kraken.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_kraken/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterKraken/: kraken.h
examples/: features.kr  hello.kr
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: control_flow.txt  expressions.txt  functions.txt
